objects/SVMXC__Checklist__c.object
<CustomObject>
    <description>This object is used to store the Submitted OR In-progress Checklist records for the Checklist type of SFM process.</description>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Used to get Process Name</description>
        <formula>SVMXC__ChecklistProcessID__r.SVMXC__Name__c</formula>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ChecklistJSON__c</fullName>
        <description>This field is used to hold the Question and Answers as JSON string  {attribute:value,}</description>
        <label>ChecklistJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__ChecklistMetaJSON__c</fullName>
        <description>This field is used to hold the JSON information related to Checklist Layout Structure</description>
        <label>ChecklistMetaJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__ChecklistProcessID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is ued to hold the reference to the Checklist Process</description>
        <label>ChecklistProcessID</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This fields is used to hold the user name who completed the Checklist</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Completed_On__c</fullName>
        <description>This field is used to hold the date and time when the Checklist was completed</description>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist_End_Latitude__c</fullName>
        <description>Used to capture Latitude where the checklist was completed.</description>
        <inlineHelpText>Used to capture Latitude where the checklist was completed.</inlineHelpText>
        <label>Checklist End Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist_End_Longitude__c</fullName>
        <description>Used to capture Longitude where the checklist was completed.</description>
        <inlineHelpText>Used to capture Longitude where the checklist was completed.</inlineHelpText>
        <label>Checklist End Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist_Group_Id__c</fullName>
        <description>This is used to identify a checklist record that is split across multiple rows when ChecklistMetaJSON is split</description>
        <label>Checklist Group Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist_Start_Latitude__c</fullName>
        <description>Used to capture Latitude where the checklist was started.</description>
        <inlineHelpText>Used to capture Latitude where the checklist was started.</inlineHelpText>
        <label>Checklist Start Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist_Start_Longitude__c</fullName>
        <description>Used to capture Longitude where the checklist was started.</description>
        <inlineHelpText>Used to capture Longitude where the checklist was started.</inlineHelpText>
        <label>Checklist Start Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Parts_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Parts Order</description>
        <label>Parts Order</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Sequence__c</fullName>
        <description>This field is used to store the sequence of the checklist row when the checklist record is split into multiple rows based on ChecklistMetaJSON size,</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Started_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture user who started the checklist.</description>
        <inlineHelpText>Used to capture user who started the checklist.</inlineHelpText>
        <label>Started By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Started_On__c</fullName>
        <description>Used to capture Start Datetime of checklist.</description>
        <inlineHelpText>Used to capture Start Datetime of checklist.</inlineHelpText>
        <label>Started On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Work_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Work Detail</description>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>This field is used to hold the status of the Checklist</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__What_Id__c</fullName>
        <description>This field is used to hold the reference Id to Source / Transaction Record</description>
        <label>What Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>